# penelope

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: ARCHITECTURE.md
penelope/: __init__.py  __main__.py  agent.py  coding_tool.py  events.py  fs_tools.py  mcp_tools.py  provider.py  registry.py  server.py  shell_tool.py  subagent_tool.py  tools.py  web_tools.py
penelope/executors/: __init__.py  base.py  qwen_code.py
penelope/store/: __init__.py  catalog.py  schema.sql
tests/: test_agent_loop.py  test_catalog.py  test_coding_tool.py  test_fs_tools.py  test_mcp_tools.py  test_qwen_executor.py  test_server.py  test_shell_tool.py  test_subagent_tool.py  test_web_tools.py
