[project]
name = "penelope"
version = "0.0.0"
description = "A self-hosted agent runtime: database-backed agents and prompts, pluggable coding executors, MCP tools."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
keywords = ["agent", "llm", "mcp", "tool-calling", "self-hosted"]

dependencies = ["openai>=1.40"]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff", "mypy"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
